# civic-agentcy

./: .env  .gitignore  .replit  Modelfile  README.md  __init__.py  agents.py  change_analysis.md  civic-api.py  civic-local.py  main.py  output  policy_brief.md  policy_brief_example.md  pyproject.toml  replit.nix  requirements.txt  tasks.py  test.py  test2.py  tool-test.py  trip_agents.py  trip_tasks.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
output/: gun control _January-17-2024.md  gun control _January-18-2024.md  output.md  output_January-17-2024.md
tests/: civic-local.py  metaphor.py  pplx.py  you.py
tests/marketing/: agents.py  main.py
tools/: ExaSearchTool.py  Perplexity_tool.py  browser_tools.py  exa_search_tools.py  file_tools.py  instructor.py  metaphor_search.py  metaphor_similar.py  perplexity_tools.py  search.py  search_tools-serp.py  search_tools.py  sec_tools.py  you_search_tools.py
