[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "civic-agentcy"
version = "0.1.0"
description = "Public Policy Researcher & Analysis"
authors = ["Ali Madad <ali@scty.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
new-dependency = "1.0.0"
version = "0.1.1"
langchain = "0.1.6"
openai = "1.12.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.0.0,<9.0.0"
black = "^20.8b1"
isort = "^5.6"