[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "civic-agentcy"
version = "0.1.0"
description = "Public Policy Researcher & Analysis"
authors = ["Ali Madad <ali@scty.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
langchain = "0.1.6"
openai = "1.12.0"
streamlit = "^1.0"  # Adjust the version as necessary
python = ">=3.10,<=3.13"

[tool.poetry.dev-dependencies]
pytest = ">=8.0.0,<9.0.0"
black = "^20.8b1"
isort = "^5.6"